parser.js
parser = (function() {
  "use strict";

  /*
   * Generated by PEG.js 0.9.0.
   *
   * http://pegjs.org/
   */

  function peg$subclass(child, parent) {
    function ctor() { this.constructor = child; }
    ctor.prototype = parent.prototype;
    child.prototype = new ctor();
  }

  function peg$SyntaxError(message, expected, found, location) {
    this.message  = message;
    this.expected = expected;
    this.found    = found;
    this.location = location;
    this.name     = "SyntaxError";

    if (typeof Error.captureStackTrace === "function") {
      Error.captureStackTrace(this, peg$SyntaxError);
    }
  }

  peg$subclass(peg$SyntaxError, Error);

  function peg$parse(input) {
    var options = arguments.length > 1 ? arguments[1] : {},
        parser  = this,

        peg$FAILED = {},

        peg$startRuleFunctions = { Code: peg$parseCode, Expression: peg$parseExpression },
        peg$startRuleFunction  = peg$parseCode,

        peg$c0 = function(d, c) {
            var rv = [d].concat(mapPos(c, 1));
            var v = rv.pop();
            if (v.isLine || v.text.trim() != "")
              rv.push(v);
            return rv;
          },
        peg$c1 = function(ws, c) { return { isLine: false, text: text() }; },
        peg$c2 = function(deps, ln, expr, r) {
            deps = deps===undefined?[]:mapPos(deps, 0);
            return {
              isLine: true,
              deps: deps,
              line: ln,
              expr: expr,
              rule: r,
              toString: deps.map((i) => "[" + i + "]").join("") + "\t(" + ln + ")\t" + expr.toString() + "\t" + r.toString()
            }
          },
        peg$c3 = { type: "other", description: "premise number" },
        peg$c4 = "[",
        peg$c5 = { type: "literal", value: "[", description: "\"[\"" },
        peg$c6 = "]",
        peg$c7 = { type: "literal", value: "]", description: "\"]\"" },
        peg$c8 = function(l) {
            return l;
          },
        peg$c9 = { type: "other", description: "line number" },
        peg$c10 = "(",
        peg$c11 = { type: "literal", value: "(", description: "\"(\"" },
        peg$c12 = ")",
        peg$c13 = { type: "literal", value: ")", description: "\")\"" },
        peg$c14 = { type: "other", description: "rule" },
        peg$c15 = "P",
        peg$c16 = { type: "literal", value: "P", description: "\"P\"" },
        peg$c17 = function() {
            return addRuleMeta({ name: "P" });
          },
        peg$c18 = "D",
        peg$c19 = { type: "literal", value: "D", description: "\"D\"" },
        peg$c20 = function(dep, ln) {
            return addRuleMeta({ name: "D", line: ln, discharged: dep });
          },
        peg$c21 = "TF",
        peg$c22 = { type: "literal", value: "TF", description: "\"TF\"" },
        peg$c23 = function(lns) {
            return addRuleMeta({ name: "TF", lines: mapPos(lns, 0) });
          },
        peg$c24 = "CQ",
        peg$c25 = { type: "literal", value: "CQ", description: "\"CQ\"" },
        peg$c26 = "UI",
        peg$c27 = { type: "literal", value: "UI", description: "\"UI\"" },
        peg$c28 = "UG",
        peg$c29 = { type: "literal", value: "UG", description: "\"UG\"" },
        peg$c30 = "EG",
        peg$c31 = { type: "literal", value: "EG", description: "\"EG\"" },
        peg$c32 = function(ln, nm) {
            return addRuleMeta({ name: nm, line: ln });
          },
        peg$c33 = "EII",
        peg$c34 = { type: "literal", value: "EII", description: "\"EII\"" },
        peg$c35 = function(ln, vr) {
            return addRuleMeta({ name: "EII", line: ln, variable: vr });
          },
        peg$c36 = "EIE",
        peg$c37 = { type: "literal", value: "EIE", description: "\"EIE\"" },
        peg$c38 = function(dep, ln) {
            return addRuleMeta({ name: "EIE", line: ln, discharged: dep });
          },
        peg$c39 = function(expr) { return expr; },
        peg$c40 = function(lhs, rhs) {
            return Expressions.Identity(lhs, rhs, true);
          },
        peg$c41 = function(e) {
            return Expressions.Negation(e);
          },
        peg$c42 = function(cond, impl) {
            return Expressions.Conditional(cond, impl);
          },
        peg$c43 = function(exprF, exprR) {
            return Expressions.Junction(true, [exprF].concat(mapPos(exprR, 3)));
          },
        peg$c44 = function(exprF, exprR) {
            return Expressions.Junction(false, [exprF].concat(mapPos(exprR, 3)));
          },
        peg$c45 = function(lhs, rhs) {
            return Expressions.Biconditional(lhs, rhs);
          },
        peg$c46 = function(binds, expr) {
            return Expressions.Quantifier(mapPos(binds, 2), expr);
          },
        peg$c47 = function(isForAll, lttr) {
            return {universal: isForAll, letter: lttr };
          },
        peg$c48 = { type: "other", description: "predicate" },
        peg$c49 = /^[A-Z]/,
        peg$c50 = { type: "class", value: "[A-Z]", description: "[A-Z]" },
        peg$c51 = function(pr, lttr) {
            return Expressions.Predicate(pr, lttr);
          },
        peg$c52 = { type: "other", description: "sentence letter" },
        peg$c53 = /^[a-z]/,
        peg$c54 = { type: "class", value: "[a-z]", description: "[a-z]" },
        peg$c55 = function(letter) {
            return Expressions.SentenceLetter(letter);
          },
        peg$c56 = { type: "other", description: "\u2200" },
        peg$c57 = "for all",
        peg$c58 = { type: "literal", value: "for all", description: "\"for all\"" },
        peg$c59 = "forall",
        peg$c60 = { type: "literal", value: "forall", description: "\"forall\"" },
        peg$c61 = "\u2200",
        peg$c62 = { type: "literal", value: "\u2200", description: "\"\\u2200\"" },
        peg$c63 = function() {
            return true;
          },
        peg$c64 = { type: "other", description: "\u2203" },
        peg$c65 = "exists",
        peg$c66 = { type: "literal", value: "exists", description: "\"exists\"" },
        peg$c67 = "\u2203",
        peg$c68 = { type: "literal", value: "\u2203", description: "\"\\u2203\"" },
        peg$c69 = function() {
            return false;
          },
        peg$c70 = { type: "other", description: "\xAC" },
        peg$c71 = "not",
        peg$c72 = { type: "literal", value: "not", description: "\"not\"" },
        peg$c73 = "\xAC",
        peg$c74 = { type: "literal", value: "\xAC", description: "\"\\xAC\"" },
        peg$c75 = { type: "other", description: "\u2227" },
        peg$c76 = "and",
        peg$c77 = { type: "literal", value: "and", description: "\"and\"" },
        peg$c78 = "\u2227",
        peg$c79 = { type: "literal", value: "\u2227", description: "\"\\u2227\"" },
        peg$c80 = { type: "other", description: "\u2228" },
        peg$c81 = "or",
        peg$c82 = { type: "literal", value: "or", description: "\"or\"" },
        peg$c83 = "\u2228",
        peg$c84 = { type: "literal", value: "\u2228", description: "\"\\u2228\"" },
        peg$c85 = { type: "other", description: "\u2192" },
        peg$c86 = "->",
        peg$c87 = { type: "literal", value: "->", description: "\"->\"" },
        peg$c88 = "\u2192",
        peg$c89 = { type: "literal", value: "\u2192", description: "\"\\u2192\"" },
        peg$c90 = { type: "other", description: "\u2261" },
        peg$c91 = "<->",
        peg$c92 = { type: "literal", value: "<->", description: "\"<->\"" },
        peg$c93 = "\u2261",
        peg$c94 = { type: "literal", value: "\u2261", description: "\"\\u2261\"" },
        peg$c95 = { type: "other", description: "=" },
        peg$c96 = "=",
        peg$c97 = { type: "literal", value: "=", description: "\"=\"" },
        peg$c98 = { type: "other", description: "\u2260" },
        peg$c99 = "!=",
        peg$c100 = { type: "literal", value: "!=", description: "\"!=\"" },
        peg$c101 = "\u2260",
        peg$c102 = { type: "literal", value: "\u2260", description: "\"\\u2260\"" },
        peg$c103 = { type: "other", description: "comment" },
        peg$c104 = "//",
        peg$c105 = { type: "literal", value: "//", description: "\"//\"" },
        peg$c106 = function() { return text(); },
        peg$c107 = { type: "other", description: "integer" },
        peg$c108 = function() { return parseInt(text(), 10); },
        peg$c109 = { type: "other", description: "letter" },
        peg$c110 = /^[a-zA-Z_]/,
        peg$c111 = { type: "class", value: "[a-zA-Z_]", description: "[a-zA-Z_]" },
        peg$c112 = { type: "other", description: "digit" },
        peg$c113 = /^[0-9]/,
        peg$c114 = { type: "class", value: "[0-9]", description: "[0-9]" },
        peg$c115 = { type: "any", description: "any character" },
        peg$c116 = { type: "other", description: "whitespace" },
        peg$c117 = "\t",
        peg$c118 = { type: "literal", value: "\t", description: "\"\\t\"" },
        peg$c119 = "\x0B",
        peg$c120 = { type: "literal", value: "\x0B", description: "\"\\x0B\"" },
        peg$c121 = "\f",
        peg$c122 = { type: "literal", value: "\f", description: "\"\\f\"" },
        peg$c123 = " ",
        peg$c124 = { type: "literal", value: " ", description: "\" \"" },
        peg$c125 = "\xA0",
        peg$c126 = { type: "literal", value: "\xA0", description: "\"\\xA0\"" },
        peg$c127 = "\uFEFF",
        peg$c128 = { type: "literal", value: "\uFEFF", description: "\"\\uFEFF\"" },
        peg$c129 = /^[\n\r\u2028\u2029]/,
        peg$c130 = { type: "class", value: "[\\n\\r\\u2028\\u2029]", description: "[\\n\\r\\u2028\\u2029]" },
        peg$c131 = { type: "other", description: "end of line" },
        peg$c132 = "\n",
        peg$c133 = { type: "literal", value: "\n", description: "\"\\n\"" },
        peg$c134 = "\r\n",
        peg$c135 = { type: "literal", value: "\r\n", description: "\"\\r\\n\"" },
        peg$c136 = "\r",
        peg$c137 = { type: "literal", value: "\r", description: "\"\\r\"" },
        peg$c138 = "\u2028",
        peg$c139 = { type: "literal", value: "\u2028", description: "\"\\u2028\"" },
        peg$c140 = "\u2029",
        peg$c141 = { type: "literal", value: "\u2029", description: "\"\\u2029\"" },
        peg$c142 = function() {return "";},

        peg$currPos          = 0,
        peg$savedPos         = 0,
        peg$posDetailsCache  = [{ line: 1, column: 1, seenCR: false }],
        peg$maxFailPos       = 0,
        peg$maxFailExpected  = [],
        peg$silentFails      = 0,

        peg$result;

    if ("startRule" in options) {
      if (!(options.startRule in peg$startRuleFunctions)) {
        throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
      }

      peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
    }

    function text() {
      return input.substring(peg$savedPos, peg$currPos);
    }

    function location() {
      return peg$computeLocation(peg$savedPos, peg$currPos);
    }

    function expected(description) {
      throw peg$buildException(
        null,
        [{ type: "other", description: description }],
        input.substring(peg$savedPos, peg$currPos),
        peg$computeLocation(peg$savedPos, peg$currPos)
      );
    }

    function error(message) {
      throw peg$buildException(
        message,
        null,
        input.substring(peg$savedPos, peg$currPos),
        peg$computeLocation(peg$savedPos, peg$currPos)
      );
    }

    function peg$computePosDetails(pos) {
      var details = peg$posDetailsCache[pos],
          p, ch;

      if (details) {
        return details;
      } else {
        p = pos - 1;
        while (!peg$posDetailsCache[p]) {
          p--;
        }

        details = peg$posDetailsCache[p];
        details = {
          line:   details.line,
          column: details.column,
          seenCR: details.seenCR
        };

        while (p < pos) {
          ch = input.charAt(p);
          if (ch === "\n") {
            if (!details.seenCR) { details.line++; }
            details.column = 1;
            details.seenCR = false;
          } else if (ch === "\r" || ch === "\u2028" || ch === "\u2029") {
            details.line++;
            details.column = 1;
            details.seenCR = true;
          } else {
            details.column++;
            details.seenCR = false;
          }

          p++;
        }

        peg$posDetailsCache[pos] = details;
        return details;
      }
    }

    function peg$computeLocation(startPos, endPos) {
      var startPosDetails = peg$computePosDetails(startPos),
          endPosDetails   = peg$computePosDetails(endPos);

      return {
        start: {
          offset: startPos,
          line:   startPosDetails.line,
          column: startPosDetails.column
        },
        end: {
          offset: endPos,
          line:   endPosDetails.line,
          column: endPosDetails.column
        }
      };
    }

    function peg$fail(expected) {
      if (peg$currPos < peg$maxFailPos) { return; }

      if (peg$currPos > peg$maxFailPos) {
        peg$maxFailPos = peg$currPos;
        peg$maxFailExpected = [];
      }

      peg$maxFailExpected.push(expected);
    }

    function peg$buildException(message, expected, found, location) {
      function cleanupExpected(expected) {
        var i = 1;

        expected.sort(function(a, b) {
          if (a.description < b.description) {
            return -1;
          } else if (a.description > b.description) {
            return 1;
          } else {
            return 0;
          }
        });

        while (i < expected.length) {
          if (expected[i - 1] === expected[i]) {
            expected.splice(i, 1);
          } else {
            i++;
          }
        }
      }

      function buildMessage(expected, found) {
        function stringEscape(s) {
          function hex(ch) { return ch.charCodeAt(0).toString(16).toUpperCase(); }

          return s
            .replace(/\\/g,   '\\\\')
            .replace(/"/g,    '\\"')
            .replace(/\x08/g, '\\b')
            .replace(/\t/g,   '\\t')
            .replace(/\n/g,   '\\n')
            .replace(/\f/g,   '\\f')
            .replace(/\r/g,   '\\r')
            .replace(/[\x00-\x07\x0B\x0E\x0F]/g, function(ch) { return '\\x0' + hex(ch); })
            .replace(/[\x10-\x1F\x80-\xFF]/g,    function(ch) { return '\\x'  + hex(ch); })
            .replace(/[\u0100-\u0FFF]/g,         function(ch) { return '\\u0' + hex(ch); })
            .replace(/[\u1000-\uFFFF]/g,         function(ch) { return '\\u'  + hex(ch); });
        }

        var expectedDescs = new Array(expected.length),
            expectedDesc, foundDesc, i;

        for (i = 0; i < expected.length; i++) {
          expectedDescs[i] = expected[i].description;
        }

        expectedDesc = expected.length > 1
          ? expectedDescs.slice(0, -1).join(", ")
              + " or "
              + expectedDescs[expected.length - 1]
          : expectedDescs[0];

        foundDesc = found ? "\"" + stringEscape(found) + "\"" : "end of input";

        return "Expected " + expectedDesc + " but " + foundDesc + " found.";
      }

      if (expected !== null) {
        cleanupExpected(expected);
      }

      return new peg$SyntaxError(
        message !== null ? message : buildMessage(expected, found),
        expected,
        found,
        location
      );
    }

    function peg$parseCode() {
      var s0, s1, s2, s3, s4, s5;

      s0 = peg$currPos;
      s1 = peg$parseLine();
      if (s1 === peg$FAILED) {
        s1 = peg$parseCommentLine();
      }
      if (s1 !== peg$FAILED) {
        s2 = [];
        s3 = peg$currPos;
        s4 = peg$parseLineTerminatorSequence();
        if (s4 !== peg$FAILED) {
          s5 = peg$parseLine();
          if (s5 === peg$FAILED) {
            s5 = peg$parseCommentLine();
          }
          if (s5 !== peg$FAILED) {
            s4 = [s4, s5];
            s3 = s4;
          } else {
            peg$currPos = s3;
            s3 = peg$FAILED;
          }
        } else {
          peg$currPos = s3;
          s3 = peg$FAILED;
        }
        while (s3 !== peg$FAILED) {
          s2.push(s3);
          s3 = peg$currPos;
          s4 = peg$parseLineTerminatorSequence();
          if (s4 !== peg$FAILED) {
            s5 = peg$parseLine();
            if (s5 === peg$FAILED) {
              s5 = peg$parseCommentLine();
            }
            if (s5 !== peg$FAILED) {
              s4 = [s4, s5];
              s3 = s4;
            } else {
              peg$currPos = s3;
              s3 = peg$FAILED;
            }
          } else {
            peg$currPos = s3;
            s3 = peg$FAILED;
          }
        }
        if (s2 !== peg$FAILED) {
          s3 = peg$parseLineTerminatorSequence();
          if (s3 === peg$FAILED) {
            s3 = null;
          }
          if (s3 !== peg$FAILED) {
            s4 = peg$parse_();
            if (s4 !== peg$FAILED) {
              peg$savedPos = s0;
              s1 = peg$c0(s1, s2);
              s0 = s1;
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parseCommentLine() {
      var s0, s1, s2;

      s0 = peg$currPos;
      s1 = peg$parse_();
      if (s1 !== peg$FAILED) {
        s2 = peg$parseSingleLineComment();
        if (s2 === peg$FAILED) {
          s2 = null;
        }
        if (s2 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$c1(s1, s2);
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parseLine() {
      var s0, s1, s2, s3, s4, s5, s6, s7, s8;

      s0 = peg$currPos;
      s1 = peg$parse_();
      if (s1 !== peg$FAILED) {
        s2 = [];
        s3 = peg$currPos;
        s4 = peg$parseDependency();
        if (s4 !== peg$FAILED) {
          s5 = peg$parse_();
          if (s5 !== peg$FAILED) {
            s4 = [s4, s5];
            s3 = s4;
          } else {
            peg$currPos = s3;
            s3 = peg$FAILED;
          }
        } else {
          peg$currPos = s3;
          s3 = peg$FAILED;
        }
        while (s3 !== peg$FAILED) {
          s2.push(s3);
          s3 = peg$currPos;
          s4 = peg$parseDependency();
          if (s4 !== peg$FAILED) {
            s5 = peg$parse_();
            if (s5 !== peg$FAILED) {
              s4 = [s4, s5];
              s3 = s4;
            } else {
              peg$currPos = s3;
              s3 = peg$FAILED;
            }
          } else {
            peg$currPos = s3;
            s3 = peg$FAILED;
          }
        }
        if (s2 !== peg$FAILED) {
          s3 = peg$parseLineNumber();
          if (s3 !== peg$FAILED) {
            s4 = peg$parse_();
            if (s4 !== peg$FAILED) {
              s5 = peg$parseExpression();
              if (s5 !== peg$FAILED) {
                s6 = peg$parse_();
                if (s6 !== peg$FAILED) {
                  s7 = peg$parseRule();
                  if (s7 !== peg$FAILED) {
                    s8 = peg$parse_();
                    if (s8 !== peg$FAILED) {
                      peg$savedPos = s0;
                      s1 = peg$c2(s2, s3, s5, s7);
                      s0 = s1;
                    } else {
                      peg$currPos = s0;
                      s0 = peg$FAILED;
                    }
                  } else {
                    peg$currPos = s0;
                    s0 = peg$FAILED;
                  }
                } else {
                  peg$currPos = s0;
                  s0 = peg$FAILED;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parseDependency() {
      var s0, s1, s2, s3;

      peg$silentFails++;
      s0 = peg$currPos;
      if (input.charCodeAt(peg$currPos) === 91) {
        s1 = peg$c4;
        peg$currPos++;
      } else {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c5); }
      }
      if (s1 !== peg$FAILED) {
        s2 = peg$parseInteger();
        if (s2 !== peg$FAILED) {
          if (input.charCodeAt(peg$currPos) === 93) {
            s3 = peg$c6;
            peg$currPos++;
          } else {
            s3 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c7); }
          }
          if (s3 !== peg$FAILED) {
            peg$savedPos = s0;
            s1 = peg$c8(s2);
            s0 = s1;
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
      peg$silentFails--;
      if (s0 === peg$FAILED) {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c3); }
      }

      return s0;
    }

    function peg$parseLineNumber() {
      var s0, s1, s2, s3;

      peg$silentFails++;
      s0 = peg$currPos;
      if (input.charCodeAt(peg$currPos) === 40) {
        s1 = peg$c10;
        peg$currPos++;
      } else {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c11); }
      }
      if (s1 !== peg$FAILED) {
        s2 = peg$parseInteger();
        if (s2 !== peg$FAILED) {
          if (input.charCodeAt(peg$currPos) === 41) {
            s3 = peg$c12;
            peg$currPos++;
          } else {
            s3 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c13); }
          }
          if (s3 !== peg$FAILED) {
            peg$savedPos = s0;
            s1 = peg$c8(s2);
            s0 = s1;
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
      peg$silentFails--;
      if (s0 === peg$FAILED) {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c9); }
      }

      return s0;
    }

    function peg$parseRule() {
      var s0, s1, s2, s3, s4, s5;

      peg$silentFails++;
      s0 = peg$currPos;
      if (input.charCodeAt(peg$currPos) === 80) {
        s1 = peg$c15;
        peg$currPos++;
      } else {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c16); }
      }
      if (s1 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c17();
      }
      s0 = s1;
      if (s0 === peg$FAILED) {
        s0 = peg$currPos;
        s1 = peg$parseDependency();
        if (s1 !== peg$FAILED) {
          s2 = peg$parse_();
          if (s2 !== peg$FAILED) {
            s3 = peg$parseLineNumber();
            if (s3 !== peg$FAILED) {
              s4 = peg$parse_();
              if (s4 !== peg$FAILED) {
                if (input.charCodeAt(peg$currPos) === 68) {
                  s5 = peg$c18;
                  peg$currPos++;
                } else {
                  s5 = peg$FAILED;
                  if (peg$silentFails === 0) { peg$fail(peg$c19); }
                }
                if (s5 !== peg$FAILED) {
                  peg$savedPos = s0;
                  s1 = peg$c20(s1, s3);
                  s0 = s1;
                } else {
                  peg$currPos = s0;
                  s0 = peg$FAILED;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
        if (s0 === peg$FAILED) {
          s0 = peg$currPos;
          s1 = [];
          s2 = peg$currPos;
          s3 = peg$parseLineNumber();
          if (s3 !== peg$FAILED) {
            s4 = peg$parse_();
            if (s4 !== peg$FAILED) {
              s3 = [s3, s4];
              s2 = s3;
            } else {
              peg$currPos = s2;
              s2 = peg$FAILED;
            }
          } else {
            peg$currPos = s2;
            s2 = peg$FAILED;
          }
          if (s2 !== peg$FAILED) {
            while (s2 !== peg$FAILED) {
              s1.push(s2);
              s2 = peg$currPos;
              s3 = peg$parseLineNumber();
              if (s3 !== peg$FAILED) {
                s4 = peg$parse_();
                if (s4 !== peg$FAILED) {
                  s3 = [s3, s4];
                  s2 = s3;
                } else {
                  peg$currPos = s2;
                  s2 = peg$FAILED;
                }
              } else {
                peg$currPos = s2;
                s2 = peg$FAILED;
              }
            }
          } else {
            s1 = peg$FAILED;
          }
          if (s1 !== peg$FAILED) {
            if (input.substr(peg$currPos, 2) === peg$c21) {
              s2 = peg$c21;
              peg$currPos += 2;
            } else {
              s2 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$c22); }
            }
            if (s2 !== peg$FAILED) {
              peg$savedPos = s0;
              s1 = peg$c23(s1);
              s0 = s1;
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
          if (s0 === peg$FAILED) {
            s0 = peg$currPos;
            s1 = peg$parseLineNumber();
            if (s1 !== peg$FAILED) {
              s2 = peg$parse_();
              if (s2 !== peg$FAILED) {
                if (input.substr(peg$currPos, 2) === peg$c24) {
                  s3 = peg$c24;
                  peg$currPos += 2;
                } else {
                  s3 = peg$FAILED;
                  if (peg$silentFails === 0) { peg$fail(peg$c25); }
                }
                if (s3 === peg$FAILED) {
                  if (input.substr(peg$currPos, 2) === peg$c26) {
                    s3 = peg$c26;
                    peg$currPos += 2;
                  } else {
                    s3 = peg$FAILED;
                    if (peg$silentFails === 0) { peg$fail(peg$c27); }
                  }
                  if (s3 === peg$FAILED) {
                    if (input.substr(peg$currPos, 2) === peg$c28) {
                      s3 = peg$c28;
                      peg$currPos += 2;
                    } else {
                      s3 = peg$FAILED;
                      if (peg$silentFails === 0) { peg$fail(peg$c29); }
                    }
                    if (s3 === peg$FAILED) {
                      if (input.substr(peg$currPos, 2) === peg$c30) {
                        s3 = peg$c30;
                        peg$currPos += 2;
                      } else {
                        s3 = peg$FAILED;
                        if (peg$silentFails === 0) { peg$fail(peg$c31); }
                      }
                    }
                  }
                }
                if (s3 !== peg$FAILED) {
                  peg$savedPos = s0;
                  s1 = peg$c32(s1, s3);
                  s0 = s1;
                } else {
                  peg$currPos = s0;
                  s0 = peg$FAILED;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
            if (s0 === peg$FAILED) {
              s0 = peg$currPos;
              s1 = peg$parseLineNumber();
              if (s1 !== peg$FAILED) {
                s2 = peg$parseLetter();
                if (s2 !== peg$FAILED) {
                  s3 = peg$parse_();
                  if (s3 !== peg$FAILED) {
                    if (input.substr(peg$currPos, 3) === peg$c33) {
                      s4 = peg$c33;
                      peg$currPos += 3;
                    } else {
                      s4 = peg$FAILED;
                      if (peg$silentFails === 0) { peg$fail(peg$c34); }
                    }
                    if (s4 !== peg$FAILED) {
                      peg$savedPos = s0;
                      s1 = peg$c35(s1, s2);
                      s0 = s1;
                    } else {
                      peg$currPos = s0;
                      s0 = peg$FAILED;
                    }
                  } else {
                    peg$currPos = s0;
                    s0 = peg$FAILED;
                  }
                } else {
                  peg$currPos = s0;
                  s0 = peg$FAILED;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
